# adhdman

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: __init__.py  agenda.py  coach.py  config.py  copy.py  db.py  main.py  repositories.py  schemas.py  search.py  undo.py
backend/tests/: test_agenda.py  test_agenda_endpoint.py  test_body_double_endpoints.py  test_body_double_repo.py  test_breakdown_endpoints.py  test_breakdown_repo.py  test_capture.py  test_classification_pipeline.py  test_classification_rules.py  test_classifier_schema.py  test_classify_endpoint.py  test_coach.py  test_config.py  test_copy.py  test_dashboard.py  test_db.py  test_event_update_delete.py  test_events.py  test_focus_endpoints.py  test_focus_repo.py  test_inbox.py  test_mvs_endpoints.py  test_mvs_repo.py  test_openrouter_provider.py  test_phase6_schema.py  test_promote_task.py  test_resolve_endpoint.py  test_resolver.py  test_search.py  test_stuck_endpoints.py  test_stuck_repo.py  test_survival_endpoints.py  test_task_update_delete.py  test_tasks.py  test_today.py  test_undo.py  test_web_static.py
docs/plans/: phase1-capture-core.md  phase2-intent-classification.md  phase3-resolver-undo.md  phase4-tui-command-center.md  phase5-readonly-web-memory.md  phase6-execution-helpers.md  phase7-tui-ux-deepening.md  phase8-contextual-priority-engine.md  phase9-llm-execution-coach.md
tui/: __init__.py  app.py  cli.py  client.py  commands.py  rendering.py  state.py
tui/tests/: test_agenda_tui.py  (+9 more)
(+17 files in other folders)
