[project]
name = "adhdman"
version = "0.1.0"
description = "Local-first single-user execution support system"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
tui = [
  "textual>=0.60",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "textual>=0.60",
]

[tool.pytest.ini_options]
pythonpath = ["backend", "."]
testpaths = ["backend/tests", "tui/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["backend", "tui"]
